# android-cmake-sample

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/cmake/: MainActivity.java
liba/: build.gradle
liba/cmake/: CMakeLists.txt
liba/native/: Math.cpp  Math.hpp  sample.cpp
liba/src/main/: AndroidManifest.xml
